Fix missing background colors

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     position: absolute;
     left: 0;
     right: 0;
+    top: 0;
+    bottom: 0;
     background-color: #ADD8E6;
     z-index: 2;
 }
